--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE HTML>
 <html>
-  <head>
-   <title>Hello</title> 
-  </head>
-  <body>
-    <h1>Hello World</h1>
-  </body>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="refresh" content="5;URL=http://www.google.com">
+</head>
+<body>
+</body>
 </html>
