--- a/Menu.html
+++ b/Menu.html
@@ -6,7 +6,7 @@
         <tr>
             <td>
                 <div class="inputImagenModificado">
-                	<a href="Menu2.html"><img src="./image/Menu1.jpg" width="340" height="720">
+                	<a href="Menu2.html"><img src="./SaladHausMenu/image/Menu1.jpg" width="340" height="720">
                                         
                 </div>
             </td>
