--- a/Menu2.html
+++ b/Menu2.html
@@ -15,3 +15,6 @@
         
     </table>
 </form>
+<div align="center">
+<a href="Menu.html"><img src="Next2.png" height="33" width="33" alt="Botón"</a>
+</div>
