--- a/Menu.html
+++ b/Menu.html
@@ -6,7 +6,7 @@
         <tr>
             <td>
                 <div class="inputImagenModificado">
-                    <a href="Menu2.html"><img src="image/Menu1.jpg" width="340" height="720" >
+                    <a href="Menu2.html"><img src="Menu1.jpg" width="340" height="720" >
                     
                     
                 </div>
@@ -16,5 +16,5 @@
     </table>
 </form>
 <div align="center">
-<a href="Menu2.html"><img src="image/nextbtn.png" height="33" width="33" alt="Botón"</a>
+<a href="Menu2.html"><img src="nextbtn.png" height="33" width="33" alt="Botón"</a>
 </div>
