--- a/Menu2.html
+++ b/Menu2.html
@@ -6,7 +6,7 @@
         <tr>
             <td>
                 <div class="inputImagenModificado">
-                	<a href="Menu.html"><img src="image/Menu2.jpg" width="340" height="720" >
+                	<a href="Menu.html"><img src="image/Vuelta.jpg" width="340" height="720" >
                     
                     
                 </div>
