--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="refresh" content="1;URL=Menu11.html">
+<meta http-equiv="refresh" content="1;URL=Men.html">
 </head>
 <body>
 </body>
